--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     </properties>
     
     <dependencies>
-       
+        <!-- Другие зависимости -->
         
         <dependency>
             <groupId>javax.swing</groupId>
@@ -29,7 +29,7 @@
             <version>1.0.0</version>
         </dependency>
         
-      
+        <!-- Другие зависимости -->
     </dependencies>
     
     <build>
@@ -41,6 +41,7 @@
                 <configuration>
                     <source>11</source>
                     <target>11</target>
+                    <distribution>jdk11</distribution>
                 </configuration>
             </plugin>
         </plugins>
