--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -8,22 +8,18 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-    
-    - name: Set up JDK
+    - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
-        java-version: '11'
-        distribution: 'adopt'
-    
-    - name: Build with Maven
-      run: mvn package
-    
-    - name: Upload artifacts
-      uses: actions/upload-artifact@v2
-      with:
-        name: App JAR
-        path: target/app.jar
+        java-version: 11
+
+    - name: Check out code
+      uses: actions/checkout@v2
+
+    - name: Build with Gradle
+      run: ./gradlew build
+
+    - name: Run application
+      run: java -cp build/classes/java/main PersonGUI
