--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,10 +1,7 @@
-name: Java Build
+name: Build and Deploy
 
 on:
   push:
-    branches:
-      - main
-  pull_request:
     branches:
       - main
 
@@ -13,13 +10,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Set up JDK 11
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up JDK
         uses: actions/setup-java@v2
         with:
-          java-version: 11
-
-      - name: Check out code
-        uses: actions/checkout@v2
+          java-version: '11'
 
       - name: Build with Maven
         run: mvn clean install
+
+      - name: Deploy
+        uses: some-deployment-action@v1
+        with:
+          distribution: ${{ secrets.DISTRIBUTION }}
