--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy
+name: Java CI
 
 on:
   push:
@@ -13,19 +13,19 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Set up JDK
+      - name: Set up Java
         uses: actions/setup-java@v2
         with:
           java-version: '11'
 
       - name: Build with Maven
-        run: mvn clean install
+        run: mvn package --file pom.xml --quiet
 
-      - name: Deploy
-        uses: some-deployment-action@v1
+      - name: Run tests
+        run: mvn test --file pom.xml --quiet
+
+      - name: Archive artifacts
+        uses: actions/upload-artifact@v2
         with:
-          distribution: ${{ secrets.DISTRIBUTION }}
-      - name: Example Step
-        run: echo "This step requires the 'distribution' input: ${{ inputs.distribution }}"
-        env:
-          distribution: ${{ inputs.distribution }}
+          name: built-artifacts
+          path: target/*.jar
