--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -17,6 +17,8 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: '11'
+          distribution: "temurin"
+          cache: maven
 
       - name: Build with Maven
         run: mvn package --file pom.xml --quiet
@@ -28,4 +30,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: built-artifacts
-          path: target/*.jar
+          path: people/target/*.jar
