--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -27,4 +27,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: artifact.jar
-          path: People/target/People-1.0-SNAPSHOT.jar
+          path: People/target/People-1.0.0.jar
