--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,10 @@
 
     <groupId>com.example</groupId>
     <artifactId>People</artifactId>
-    <version>1.0.0</version>
-
+    <version>3.2.0</version>
+     <configuration>
+            <encoding>UTF-8</encoding>
+     </configuration>    
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
